# bellboy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  buildx.sh  publish-chart.sh
docs/: bellboy-0.1.0.tgz  bellboy-0.2.0.tgz  index.yaml
example-k8s/: deployment.yaml  rbac.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml
k8s/: README.md  secret.yaml
src/: detector.rs  main.rs  notifier.rs  state.rs
